fix: Adjust title page font size for improved readability

--- a/assets/css/collection.css
+++ b/assets/css/collection.css
@@ -163,7 +163,7 @@
 
 .title-page {
   color: #ff8c00;
-  font-size: 35px;
+  font-size: 30px;
   font-weight: 700;
   font-family: "bali", sans-serif;
   margin: 0;
